<resources>
    <string name="app_name">GroceryDelivery</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_cart">Cart</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_to_signup">Not Registered Yet , Sign Up !</string>
    <string name="sign_in">Sign In</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="type_your_email">Type your Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="sign_up">VERIFY AND Sign up</string>
    <string name="send_otp">SEND OTP</string>
    <string name="enter_otp_here">ENTER OTP HERE</string>

    <string name="safety_net_API_KEY">"AIzaSyD5b2-ffi1e5-TQNAwNQu4N5xOV9CFeRvc"</string>
    <string name="logout">Logout</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="welcome_to_grocery_shopping">Welcome to Grocery Shopping!</string>
    <string name="become_a_seller">Become a seller?</string>
    <string name="login">LOGIN</string>
    <string name="grocery_shopping">Grocery Shopping</string>
    <string name="grocery_delivery">Grocery Delivery</string>
    <string name="et_hint_email_id">Enter email id</string>
    <string name="et_hint_password">Enter password</string>
    <string name="lbl_forgot_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an account? Register</string>
    <string name="api_key">AIzaSyAhuTxWlEfoloHllPOTEdUSTc4k3AInQxg</string>


    <!-- Citation : Spinner implementation - https://youtu.be/on_OrrX7Nw4-->
    <string-array name="categories">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Dairy</item>
        <item>Breads</item>
        <item>Cosmetics</item>
        <item>Cleaning</item>
    </string-array>
    <string-array name="sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

</resources>