<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/f1_header_image">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="App Logo"
            android:scaleType="center"
            android:src="@drawable/app_bg"/>
        <ImageView
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:layout_gravity="center"
            android:contentDescription="@string/grocery_delivery"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            />
    </FrameLayout>

    <com.example.grocerydelivery.utils.GSTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginSeller"
        android:clickable="true"
        android:text="Login as Customer"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/lbl_text_view_textSize"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/f1_header_image"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.example.grocerydelivery.utils.GSTextViewBold
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="Login as Seller"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/f1_header_image" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/til_email"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        >

        <com.example.grocerydelivery.utils.GSEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:text="abc@gmail.com"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        >
        <com.example.grocerydelivery.utils.GSEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:text="123456" />


    </com.google.android.material.textfield.TextInputLayout>



    <com.example.grocerydelivery.utils.GSTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_forgot_password"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/forgot_password_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password"/>


    <com.example.grocerydelivery.utils.GSButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/Login"
        android:textColor="@android:color/black"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <com.example.grocerydelivery.utils.GSTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_dont_have_an_account"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="Don't have a seller account? Register"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/lbl_text_view_textSize"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>