<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/f1_header_image">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="App Logo"
            android:scaleType="center"
            android:src="@drawable/app_bg"/>

        <ImageView
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:layout_gravity="center"
            android:contentDescription="@string/grocery_delivery"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />
    </FrameLayout>

    <com.example.grocerydelivery.utils.GSTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerCustomer"
        android:clickable="true"
        android:text="Register as Customer?"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/lbl_text_view_textSize"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/f1_header_image"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.example.grocerydelivery.utils.GSTextViewBold
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="Sign up as seller"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/f1_header_image" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/til_email"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        >

        <com.example.grocerydelivery.utils.GSEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:text="abc@gmail.com"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        >
        <com.example.grocerydelivery.utils.GSEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:text="123456" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.example.grocerydelivery.utils.GSButton
        android:id="@+id/buttonSignup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="SIGN UP"
        android:textColor="@android:color/black"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>